--- a/app/src/main/res/layout/activity_teacher_main.xml
+++ b/app/src/main/res/layout/activity_teacher_main.xml
@@ -1,17 +1,254 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AsTeacher.TeacherMainActivity">
+    tools:context=".AsTeacher.TeacherMainActivity"
+    android:id="@+id/drawer_layout"
+    android:background="@drawable/main_visiblity"
+    android:fitsSystemWindows="true">
 
-    <TextView
+
+    <RelativeLayout
+        android:id="@+id/homeTeacher"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Teacher Main Page"
-        android:gravity="center"
-        android:textSize="22sp"/>
+        android:layout_height="match_parent">
 
-</RelativeLayout>
+        <include
+            android:id="@+id/main_page_toolbar_teacher"
+            layout="@layout/app_bar_layout"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent">
+        </include>
+
+        <FrameLayout
+            android:id="@+id/main_container_teacher"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/main_page_toolbar_teacher">
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+
+                        <TextView
+                            android:id="@+id/homeTop"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginTop="15dp"
+                            android:fontFamily="@font/alegreya"
+                            android:text="Access Your Requirement's"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="25sp" />
+
+                        <TextView
+                            android:id="@+id/quote"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="An Investment in Knowledge Pays the Best Interest"
+                            android:layout_below="@id/homeTop"
+                            android:textColor="#000"
+                            android:textSize="15sp"
+                            android:layout_alignStart="@id/homeTop">
+
+                        </TextView>
+
+                        <LinearLayout
+                            android:layout_marginTop="50dp"
+                            android:layout_below="@id/homeTop"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentStart="true"
+                                android:layout_alignParentTop="true"
+                                android:layout_marginStart="0dp"
+                                android:layout_marginTop="5dp"
+                                android:clipToPadding="false"
+                                android:gravity="center"
+                                android:orientation="horizontal">
+
+                                <androidx.cardview.widget.CardView
+                                    android:id="@+id/syllabus"
+                                    android:clickable="true"
+                                    android:layout_width="260dp"
+                                    android:layout_height="260dp"
+                                    app:cardBackgroundColor="#FF9800"
+                                    app:cardCornerRadius="5dp">
+
+                                    <ImageView
+                                        android:layout_width="60dp"
+                                        android:layout_height="60dp"
+                                        android:src="@drawable/syllabus"
+                                        android:layout_gravity="center">
+
+                                    </ImageView>
+
+
+                                </androidx.cardview.widget.CardView>
+
+                                <androidx.cardview.widget.CardView
+                                    android:id="@+id/ppt"
+                                    android:clickable="true"
+                                    android:layout_width="125dp"
+                                    android:layout_height="125dp"
+                                    app:cardBackgroundColor="#CF1616"
+                                    app:cardCornerRadius="5dp"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_marginBottom="65dp">
+
+
+                                    <ImageView
+                                        android:layout_width="35dp"
+                                        android:layout_height="35dp"
+                                        android:src="@drawable/ppt"
+                                        android:layout_gravity="center">
+
+                                    </ImageView>
+
+
+                                </androidx.cardview.widget.CardView>
+
+
+                                <androidx.cardview.widget.CardView
+                                    android:id="@+id/videolectures"
+                                    android:clickable="true"
+                                    android:layout_width="125dp"
+                                    android:layout_height="125dp"
+                                    app:cardBackgroundColor="#3F51B5"
+                                    app:cardCornerRadius="5dp"
+                                    android:layout_marginLeft="-126dp"
+                                    android:layout_marginTop="85dp"
+                                    android:layout_marginBottom="17dp">
+
+
+                                    <ImageView
+                                        android:layout_width="35dp"
+                                        android:layout_height="35dp"
+                                        android:src="@drawable/video"
+                                        android:layout_gravity="center">
+
+                                    </ImageView>
+                                </androidx.cardview.widget.CardView>
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentStart="true"
+                                android:layout_alignParentTop="true"
+                                android:layout_marginStart="0dp"
+                                android:layout_marginTop="5dp"
+                                android:clipToPadding="false"
+                                android:gravity="center"
+                                android:orientation="horizontal">
+
+                                <androidx.cardview.widget.CardView
+                                    android:id="@+id/blogs"
+                                    android:clickable="true"
+                                    android:layout_width="195dp"
+                                    android:layout_height="195dp"
+                                    app:cardCornerRadius="5dp"
+                                    android:layout_marginStart="5dp"
+                                    app:cardBackgroundColor="#4CAF50">
+
+
+                                    <ImageView
+                                        android:layout_width="50dp"
+                                        android:layout_height="50dp"
+                                        android:src="@drawable/blog"
+                                        android:layout_gravity="center">
+
+                                    </ImageView>
+
+                                </androidx.cardview.widget.CardView>
+
+                                <androidx.cardview.widget.CardView
+                                    android:id="@+id/questions"
+                                    android:clickable="true"
+                                    android:layout_width="195dp"
+                                    android:layout_height="195dp"
+                                    android:layout_margin="5dp"
+                                    app:cardCornerRadius="5dp"
+                                    app:cardBackgroundColor="#673AB7">
+
+
+                                    <ImageView
+                                        android:layout_width="50dp"
+                                        android:layout_height="50dp"
+                                        android:src="@drawable/questions"
+                                        android:layout_gravity="center">
+
+                                    </ImageView>
+
+                                </androidx.cardview.widget.CardView>
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentStart="true"
+                                android:layout_alignParentTop="true"
+                                android:layout_marginStart="0dp"
+                                android:layout_marginTop="5dp"
+                                android:clipToPadding="false"
+                                android:gravity="center"
+                                android:orientation="horizontal">
+
+                                <androidx.cardview.widget.CardView
+                                    android:id="@+id/feedbacks"
+                                    android:clickable="true"
+                                    android:layout_width="393dp"
+                                    android:layout_height="140dp"
+                                    app:cardCornerRadius="5dp"
+                                    app:cardBackgroundColor="#475353">
+
+
+                                    <ImageView
+                                        android:layout_width="60dp"
+                                        android:layout_height="60dp"
+                                        android:src="@drawable/feedback"
+                                        android:layout_gravity="center">
+
+                                    </ImageView>
+
+
+                                </androidx.cardview.widget.CardView>
+                            </LinearLayout>
+                        </LinearLayout>
+                    </RelativeLayout>
+                </LinearLayout>
+            </ScrollView>
+        </FrameLayout>
+    </RelativeLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:theme="@style/NavTextSize"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:layout_marginBottom="3dp"
+        app:menu="@menu/navigation_menu_teacher"
+        android:id="@+id/navigation_view"
+        android:background="@drawable/image_visiblity">
+
+    </com.google.android.material.navigation.NavigationView>
+</androidx.drawerlayout.widget.DrawerLayout>
