--- a/app/src/main/res/layout/activity_teacher_main.xml
+++ b/app/src/main/res/layout/activity_teacher_main.xml
@@ -59,7 +59,7 @@
                             android:id="@+id/quote"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="An Investment in Knowledge Pays the Best Interest"
+                            android:text="Handle and maintain your students and assets."
                             android:layout_below="@id/homeTop"
                             android:textColor="#000"
                             android:textSize="15sp"
@@ -92,16 +92,11 @@
                                     android:layout_height="260dp"
                                     app:cardBackgroundColor="#FF9800"
                                     app:cardCornerRadius="5dp">
-
                                     <ImageView
                                         android:layout_width="60dp"
                                         android:layout_height="60dp"
                                         android:src="@drawable/syllabus"
-                                        android:layout_gravity="center">
-
-                                    </ImageView>
-
-
+                                        android:layout_gravity="center"/>
                                 </androidx.cardview.widget.CardView>
 
                                 <androidx.cardview.widget.CardView
@@ -113,22 +108,16 @@
                                     app:cardCornerRadius="5dp"
                                     android:layout_marginStart="10dp"
                                     android:layout_marginBottom="65dp">
-
-
                                     <ImageView
                                         android:layout_width="35dp"
                                         android:layout_height="35dp"
                                         android:src="@drawable/ppt"
                                         android:layout_gravity="center">
-
                                     </ImageView>
-
-
                                 </androidx.cardview.widget.CardView>
 
-
                                 <androidx.cardview.widget.CardView
-                                    android:id="@+id/videolectures"
+                                    android:id="@+id/addVideoLectures"
                                     android:clickable="true"
                                     android:layout_width="125dp"
                                     android:layout_height="125dp"
@@ -137,14 +126,11 @@
                                     android:layout_marginLeft="-126dp"
                                     android:layout_marginTop="85dp"
                                     android:layout_marginBottom="17dp">
-
-
                                     <ImageView
                                         android:layout_width="35dp"
                                         android:layout_height="35dp"
                                         android:src="@drawable/video"
                                         android:layout_gravity="center">
-
                                     </ImageView>
                                 </androidx.cardview.widget.CardView>
 
@@ -169,16 +155,12 @@
                                     app:cardCornerRadius="5dp"
                                     android:layout_marginStart="5dp"
                                     app:cardBackgroundColor="#4CAF50">
-
-
                                     <ImageView
                                         android:layout_width="50dp"
                                         android:layout_height="50dp"
                                         android:src="@drawable/blog"
                                         android:layout_gravity="center">
-
                                     </ImageView>
-
                                 </androidx.cardview.widget.CardView>
 
                                 <androidx.cardview.widget.CardView
@@ -189,16 +171,12 @@
                                     android:layout_margin="5dp"
                                     app:cardCornerRadius="5dp"
                                     app:cardBackgroundColor="#673AB7">
-
-
                                     <ImageView
                                         android:layout_width="50dp"
                                         android:layout_height="50dp"
                                         android:src="@drawable/questions"
                                         android:layout_gravity="center">
-
                                     </ImageView>
-
                                 </androidx.cardview.widget.CardView>
                             </LinearLayout>
 
@@ -212,7 +190,6 @@
                                 android:clipToPadding="false"
                                 android:gravity="center"
                                 android:orientation="horizontal">
-
                                 <androidx.cardview.widget.CardView
                                     android:id="@+id/feedbacks"
                                     android:clickable="true"
@@ -220,17 +197,12 @@
                                     android:layout_height="140dp"
                                     app:cardCornerRadius="5dp"
                                     app:cardBackgroundColor="#475353">
-
-
                                     <ImageView
                                         android:layout_width="60dp"
                                         android:layout_height="60dp"
                                         android:src="@drawable/feedback"
                                         android:layout_gravity="center">
-
                                     </ImageView>
-
-
                                 </androidx.cardview.widget.CardView>
                             </LinearLayout>
                         </LinearLayout>
