--- a/app/src/main/res/layout/activity_home_year.xml
+++ b/app/src/main/res/layout/activity_home_year.xml
@@ -21,208 +21,100 @@
             layout="@layout/app_bar_layout">
         </include>
 
-        <FrameLayout
-            android:id="@+id/main_container"
+<LinearLayout
+    android:layout_below="@id/home_page_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/home_page_toolbar">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                <androidx.cardview.widget.CardView
+                    android:clickable="true"
+                    android:id="@+id/planone"
+                    android:layout_width="360dp"
+                    android:layout_height="190dp"
+                    android:layout_margin="12dp"
+                    app:cardElevation="6dp"
+                    app:cardBackgroundColor="#FF9800">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginTop="74dp"
-                        android:clipToPadding="false"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="160dp"
-                            android:layout_height="100dp"
-                            android:layout_margin="10dp"
-                            app:cardBackgroundColor="#e2cf90">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="100dp"
-                                android:gravity="center"
-                                android:orientation="vertical">
-
-                                <ImageView
-                                    android:id="@+id/firstSemester"
-                                    android:layout_width="155dp"
-                                    android:layout_height="95dp"
-                                    android:scaleType="fitXY"
-                                    android:src="@drawable/firstsemlogo" />
-
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="160dp"
-                            android:layout_height="100dp"
-                            android:layout_margin="10dp"
-                            app:cardBackgroundColor="#e2cf90">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="100dp"
-                                android:gravity="center"
-                                android:orientation="vertical">
-
-                                <ImageView
-                                    android:id="@+id/secondSemester"
-                                    android:layout_width="155dp"
-                                    android:layout_height="95dp"
-                                    android:scaleType="fitXY"
-                                    android:src="@drawable/secondsemlogo" />
-
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginTop="180dp"
-                        android:clipToPadding="false"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="160dp"
-                            android:layout_height="100dp"
-                            android:layout_margin="10dp"
-                            app:cardBackgroundColor="#e2cf90">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="100dp"
-                                android:gravity="center"
-                                android:orientation="vertical">
-
-                                <ImageView
-                                    android:id="@+id/thirdSemester"
-                                    android:layout_width="155dp"
-                                    android:layout_height="95dp"
-                                    android:scaleType="fitXY"
-                                    android:src="@drawable/thirdsemlogo" />
-
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="160dp"
-                            android:layout_height="100dp"
-                            android:layout_margin="10dp"
-                            app:cardBackgroundColor="#e2cf90">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="100dp"
-                                android:gravity="center"
-                                android:orientation="vertical">
-
-                                <ImageView
-                                    android:id="@+id/fourthSemester"
-                                    android:layout_width="155dp"
-                                    android:layout_height="95dp"
-                                    android:scaleType="fitXY"
-                                    android:src="@drawable/forthsemlogo" />
-
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginTop="285dp"
-                        android:clipToPadding="false"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="160dp"
-                            android:layout_height="100dp"
-                            android:layout_margin="10dp"
-                            app:cardBackgroundColor="#e2cf90">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="100dp"
-                                android:gravity="center"
-                                android:orientation="vertical">
-
-                                <ImageView
-                                    android:id="@+id/fifthSemester"
-                                    android:layout_width="155dp"
-                                    android:layout_height="95dp"
-                                    android:scaleType="fitXY"
-                                    android:src="@drawable/fifthsemlogo" />
-
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="160dp"
-                            android:layout_height="100dp"
-                            android:layout_margin="10dp"
-                            app:cardBackgroundColor="#e2cf90">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="100dp"
-                                android:gravity="center"
-                                android:orientation="vertical">
-
-                                <ImageView
-                                    android:id="@+id/sixthSemester"
-                                    android:layout_width="155dp"
-                                    android:layout_height="95dp"
-                                    android:scaleType="fitXY"
-                                    android:src="@drawable/sixthsemlogo" />
-
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-                    </LinearLayout>
 
                     <TextView
-                        android:id="@+id/textView2"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginStart="50dp"
-                        android:layout_marginEnd="50dp"
-                        android:layout_marginBottom="31dp"
-                        android:text="All The Best"
-                        android:gravity="center"
-                        android:textSize="15sp"
-                        android:textStyle="bold"/>
+                        android:text="SEMESTER"
+                        android:textColor="#fff"
+                        android:textSize="40sp"
+                        android:textStyle="bold"
+                        android:layout_marginStart="110dp"
+                        android:layout_marginTop="110dp">
 
-                </RelativeLayout>
+                    </TextView>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="I"
+                        android:textColor="#fff"
+                        android:textSize="80sp"
+                        android:layout_marginStart="310dp"
+                        android:layout_marginTop="78dp">
+
+                    </TextView>
+
+                </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="23dp">
+
+                <androidx.cardview.widget.CardView
+                    android:clickable="true"
+                    android:layout_width="360dp"
+                    android:layout_height="190dp"
+                    android:layout_margin="12dp"
+                    app:cardElevation="6dp"
+                    app:cardBackgroundColor="#FF9800">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="SEMESTER"
+                        android:textColor="#fff"
+                        android:textSize="40sp"
+                        android:textStyle="bold"
+                        android:layout_marginStart="110dp"
+                        android:layout_marginTop="110dp">
+
+                    </TextView>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="II"
+                        android:textColor="#fff"
+                        android:textSize="80sp"
+                        android:layout_marginStart="310dp"
+                        android:layout_marginTop="78dp">
+
+                    </TextView>
+
+                </androidx.cardview.widget.CardView>
+                </LinearLayout>
+
+
             </LinearLayout>
-        </FrameLayout>
+
+        </ScrollView>
+</LinearLayout>
     </RelativeLayout>
     <com.google.android.material.navigation.NavigationView
         android:theme="@style/NavTextSize"
